--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.8",
     "@web3auth/web3auth": "^1.1.0",
+    "ethers": "^5.6.9",
     "magic-sdk": "^8.1.1",
     "moment": "^2.29.3",
     "moralis": "^1.8.1",
